--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,27 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.blinking {
+  animation: blinking 1.2s infinite ease-out;
+}
+
+@keyframes blinking {
+  from,
+  to {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.02;
+  }
+}
+
+/* gradient around an image */
+.gradient {
+  background: linear-gradient(
+    90deg,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 0.1) 50%,
+    rgba(255, 255, 255, 0) 100%
+  );
+}
